--- a/chemnaFC/templates/chemnaFC/fanPicture.html
+++ b/chemnaFC/templates/chemnaFC/fanPicture.html
@@ -6,4 +6,5 @@
     {% csrf_token %}
     {{form.as_p}}
     <button type="submit">upload</button>
+<p><a class="home-link" href="{% url 'index_page' %}">Home</a></p>
 {% endblock  %}
