--- a/chemnaFC/templates/chemnaFC/pictureview.html
+++ b/chemnaFC/templates/chemnaFC/pictureview.html
@@ -6,4 +6,5 @@
   <li><img src="{{picture.fan_picture.url}}"></li>
   
   {% endfor %}
+<p><a class="home-link" href="{% url 'index_page' %}">Home</a></p>
 {% endblock  %}
