--- a/chemnaFC/templates/chemnaFC/thankyou.html
+++ b/chemnaFC/templates/chemnaFC/thankyou.html
@@ -3,7 +3,8 @@
 {% block title %}  thank you {% endblock  %}
 
 {% block content %}
-<h3>thank you ! </h3>
+<h2>you register successfully !</h2>
+    <h3>thank you for register ! </h3>
 <p> {{message}} </p>
 <p> <a href="{% url "index_page" %}">HOME </p>
 {% endblock  %}
