--- a/chemnaFC/templates/chemnaFC/fan_list.html
+++ b/chemnaFC/templates/chemnaFC/fan_list.html
@@ -1,11 +1,65 @@
 {% extends "base.html" %}
-{% block title %}fans list{% endblock  %}
+
+{% block title %}Fans List{% endblock %}
 
 {% block content %}
- {% for fans in fan_list %}
-  <ul>
-    <li><a href="{% url "single_fan_page" fans.pk %}">{{fans.name}} :level  ({{fans.fan_level}})</li>
-  </ul>
- {% endfor %}
+<style>
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: #f8f8f8;
+    font-family: Arial, sans-serif;
+  }
 
-{% endblock  %}
+  .fan-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 400px; /* Adjust the width as per your preference */
+  }
+
+  .fan-item {
+    margin-bottom: 10px;
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .fan-name {
+    font-weight: bold;
+    color: #333;
+    transition: color 0.2s ease-in-out;
+  }
+
+  .fan-name:hover {
+    color: #ff0000; /* Change to your desired color on hover */
+  }
+
+  .fan-level {
+    color: #888;
+    font-style: italic;
+  }
+
+  .fan-link {
+    text-decoration: none;
+    color: #337ab7;
+    font-weight: bold;
+  }
+</style>
+
+<div class="container">
+  <ul class="fan-list">
+    {% for fan in fan_list %}
+    <li class="fan-item">
+      <a href="{% url 'single_fan_page' fan.pk %}" class="fan-link">
+        <span class="fan-name">{{ fan.name }}</span>: Level ({{ fan.fan_level }})
+      </a>
+    </li>
+    {% endfor %}
+  </ul>
+</div>
+{% endblock %}
