no commit message

--- a/chemnaFC/templates/chemnaFC/index.html
+++ b/chemnaFC/templates/chemnaFC/index.html
@@ -81,7 +81,7 @@
         <li><a href="{% url 'match_page' %}">Match</a></li>
         <li><a href="{% url 'fan_page' %}">Fans</a></li>
     </ul>
-    <a class="home-link" href="{% url 'index_page' %}">Home</a>
+    <p><a class="home-link" href="{% url 'login_page' %}">LOG IN</a></p>
 </div>
 
 {% endblock %}
