--- a/chemnaFC/templates/chemnaFC/players_detail.html
+++ b/chemnaFC/templates/chemnaFC/players_detail.html
@@ -88,4 +88,4 @@
 
 <!-- Add the Font Awesome library -->
 <script src="https://kit.fontawesome.com/your-font-awesome-kit.js" crossorigin="anonymous"></script>
-<p><a class="home-link" href="{% url 'index_page' %}">Home</a></p>{% endblock %}
+<p><a class="home-link" href="{% url 'squad_page' %}">SQUAD</a></p>{% endblock %}
