--- a/chemnaFC/templates/chemnaFC/thankyou.html
+++ b/chemnaFC/templates/chemnaFC/thankyou.html
@@ -49,6 +49,7 @@
   <h2>You have registered successfully!</h2>
   <h3>Thank you for registering!</h3>
   <p>{{ message }}</p>
+  <p><a class="home-link" href="{% url 'login_page' %}">LOG IN</a></p>
   <p><a class="home-link" href="{% url 'index_page' %}">HOME</a></p>
 </div>
 {% endblock %}
