no commit message

--- a/chemnaFC/templates/chemnaFC/login.html
+++ b/chemnaFC/templates/chemnaFC/login.html
@@ -14,7 +14,7 @@
      {% endcomment %}
      <button type="submit">LOGIN</button>
 </form>
-<p><a href="{% url 'forgot_page' %}">forgot password ?</a></p>
-
+{% comment %} <p><a href="{% url 'forgot_page' %}">forgot password ?</a></p>
+ {% endcomment %}
 
 {% endblock content %}
