--- a/chemnaFC/templates/chemnaFC/login.html
+++ b/chemnaFC/templates/chemnaFC/login.html
@@ -14,7 +14,6 @@
      {% endcomment %}
      <button type="submit">LOGIN</button>
 </form>
-{% comment %} <p><a href="{% url 'forgot_page' %}">forgot password ?</a></p>
- {% endcomment %}
+ <p><a href="{% url 'forgot_page' %}">forgot password ?</a></p>
 
 {% endblock content %}
