--- a/chemnaFC/templates/chemnaFC/login.html
+++ b/chemnaFC/templates/chemnaFC/login.html
@@ -8,22 +8,17 @@
       background-color: #f5f5f5;
       width: 300px;
       max-width: 100%;
-      box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-      border-radius: 4px;
     }
     
     label {
       display: block;
-      margin-bottom: 10px;
-      font-weight: bold;
+      margin-bottom: 5px;
     }
     
     input[type="text"] {
       width: 100%;
-      padding: 8px;
+      padding: 5px;
       margin-bottom: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
     }
     
     input[type="submit"] {
@@ -36,23 +31,14 @@
       cursor: pointer;
       font-size: 14px;
       font-weight: bold;
-      border-radius: 4px;
-      transition: background-color 0.3s ease;
     }
     
     input[type="submit"]:hover {
       background-color: #45a049;
     }
     
-    p.error-message {
+    p {
       margin-bottom: 10px;
-      color: red;
-      font-size: 14px;
-    }
-    
-    p.register-link {
-      margin-top: 10px;
-      font-size: 14px;
     }
     
     a {
@@ -73,15 +59,16 @@
 
 <form action="" method="POST">
     {% csrf_token %}
-    <label>Username:</label><br>
+    <label> username </lable><br>
     <input type="text" name="username"><br>
-    <label>Password:</label><br>
+    <label> password </lable><br>
     <input type="text" name="password"><br>
-    <input type="submit" value="Login"><br>
+    <input type="submit" value="login"><br>
     {% for message in messages %}
-    <p class="error-message">{{message}}</p>
+    <p>{{message}}</p>
+    
     {% endfor %}
 </form>
-<p class="register-link">Don't have an account? <a href="{% url 'register_page' %}">Sign up</a></p> 
+<p>dont have an account ?<a href="{% url "register_page" %}">sign up</a></p> 
 
 {% endblock content %}
