--- a/chemnaFC/templates/chemnaFC/login.html
+++ b/chemnaFC/templates/chemnaFC/login.html
@@ -1,74 +1,20 @@
-<style>
-    /* Add your custom CSS styles here */
-    
-    form {
-      margin: 20px;
-      padding: 20px;
-      border: 1px solid #ccc;
-      background-color: #f5f5f5;
-      width: 300px;
-      max-width: 100%;
-    }
-    
-    label {
-      display: block;
-      margin-bottom: 5px;
-    }
-    
-    input[type="text"] {
-      width: 100%;
-      padding: 5px;
-      margin-bottom: 10px;
-    }
-    
-    input[type="submit"] {
-      display: inline-block;
-      padding: 8px 16px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      text-decoration: none;
-      cursor: pointer;
-      font-size: 14px;
-      font-weight: bold;
-    }
-    
-    input[type="submit"]:hover {
-      background-color: #45a049;
-    }
-    
-    p {
-      margin-bottom: 10px;
-    }
-    
-    a {
-      color: #0000FF;
-      text-decoration: none;
-    }
-    
-    a:hover {
-      text-decoration: underline;
-    }
-</style>
-
 {% extends "base.html" %}
 
 {% block title %}login{% endblock title %}
 
 {% block content %}
 
-<form action="" method="POST">
+<form action=""  method="POST">
     {% csrf_token %}
-    <label> username </lable><br>
-    <input type="text" name="username"><br>
-    <label> password </lable><br>
-    <input type="text" name="password"><br>
-    <input type="submit" value="login"><br>
+    <label> username </lable></br>
+    <input type="text" name="username">   </br>
+    <label> password </lable></br>
+    <input type="text" name="password"></br>
+    <input type="submit" value="login"></br>
     {% for message in messages %}
     <p>{{message}}</p>
     
     {% endfor %}
 </form>
-<p>dont have an account ?<a href="{% url "register_page" %}">sign up</a></p> 
-
+<p>dont have an account ?<a href="{% url "register_page" %}">sign up</a> </p> 
 {% endblock content %}
