--- a/chemnaFC/templates/chemnaFC/index.html
+++ b/chemnaFC/templates/chemnaFC/index.html
@@ -3,6 +3,9 @@
 {% block title %}Chemna Football Club{% endblock %}
 
 {% block content %}
+<header>
+{% include "chemnaFC/header/header.html" %}
+</header>
 <style>
     body {
         font-family: Arial, sans-serif;
