--- a/chemnaFC/templates/chemnaFC/header/header.html
+++ b/chemnaFC/templates/chemnaFC/header/header.html
@@ -1,1 +1,10 @@
-hello header
+<header>
+   <h2><a href="{% url 'index_page' %}" class="home-link">Chemna Football Club CFC</a></h2>
+    <ul>
+        <li> <a href="{% url "table_page" %}">table</li>
+        <li> <a href="{% url "match_page" %}">match</li>
+        <li> <a href="{% url "squad_page" %}">squad</li>
+        <li> <a href="{% url "login_page" %}">login</li>
+        <li> <a href="{% url "fan_page" %}">fan</li>
+    </ul>
+</header>
