--- a/chemnaFC/templates/chemnaFC/match.html
+++ b/chemnaFC/templates/chemnaFC/match.html
@@ -3,6 +3,9 @@
 {% block title %}Chemna Football Club{% endblock %}
 
 {% block content %}
+<header>
+{% include "chemnaFC/header/header.html" %}
+</header>
 <style>
   .team-matches {
     max-width: 400px;
