--- a/chemnaFC/templates/chemnaFC/header/header.html
+++ b/chemnaFC/templates/chemnaFC/header/header.html
@@ -1,38 +1,50 @@
 <style>
-    header {
-        background-color: #f2f2f2;
-        padding: 10px;
-        text-align: center;
-    }
+  header {
+    background-color: #f2f2f2;
+    padding: 10px;
+    text-align: center;
+  }
 
-    h2 {
-        margin-bottom: 10px;
-    }
+  h2 {
+    margin-bottom: 10px;
+    font-family: Arial, sans-serif;
+    font-size: 24px;
+    color: #333;
+  }
 
-    a {
-        text-decoration: none;
-        color: #333;
-    }
+  a {
+    text-decoration: none;
+    color: #333;
+    transition: color 0.3s ease;
+  }
 
-    ul {
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
-    }
+  a:hover {
+    color: #ff5500;
+  }
 
-    li {
-        display: inline-block;
-        margin-right: 10px;
-    }
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+
+  li:last-child {
+    margin-right: 0;
+  }
 </style>
 
 <header>
-    <h2><a href="{% url 'index_page' %}" class="home-link">Chemna Football Club CFC</a></h2>
-    <ul>
-        <li> <a href="{% url "table_page" %}">table</a></li>
-        <li> <a href="{% url "match_page" %}">match</a></li>
-        <li> <a href="{% url "squad_page" %}">squad</a></li>
-        <li> <a href="{% url "login_page" %}">login</a></li>
-        <li> <a href="{% url "fan_page" %}">fan</a></li>
-    </ul>
+  <h2><a href="{% url 'index_page' %}" class="home-link">Chemna Football Club CFC</a></h2>
+  <ul>
+    <li><a href="{% url "table_page" %}">Table</a></li>
+    <li><a href="{% url "match_page" %}">Match</a></li>
+    <li><a href="{% url "squad_page" %}">Squad</a></li>
+    <li><a href="{% url "login_page" %}">Login</a></li>
+    <li><a href="{% url "fan_page" %}">Fan</a></li>
+  </ul>
 </header>
