--- a/chemnaFC/templates/chemnaFC/table.html
+++ b/chemnaFC/templates/chemnaFC/table.html
@@ -3,6 +3,9 @@
 {% block title %}Chemna Football Club{% endblock %}
 
 {% block content %}
+<header>
+{% include "chemnaFC/header/header.html" %}
+</header>
 <style>
   .table-container {
     text-align: center;
