--- a/chemnaFC/templates/chemnaFC/table.html
+++ b/chemnaFC/templates/chemnaFC/table.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends "base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Chemna Football Club{% endblock %}
 
@@ -80,4 +80,4 @@
   </table>
 </div>
 <p><a class="home-link" href="{% url 'index_page' %}">Home</a></p>
-{% endblock %} {% endcomment %}
+{% endblock %}
