--- a/chemnaFC/templates/chemnaFC/header/header.html
+++ b/chemnaFC/templates/chemnaFC/header/header.html
@@ -1,46 +1,85 @@
+{% load static %}
 <style>
-  header {
-    background-color: #f2f2f2;
+  /* Reset default browser styles */
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  /* Header styles */
+  .header {
+    background-color: #f2f2f2; /* Change this color to your desired background color */
     padding: 10px;
     text-align: center;
   }
 
-  h2 {
-    margin-bottom: 10px;
+  /* Logo styles */
+  .logo {
+    display: inline-block;
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+
+  .logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  /* Club name styles */
+  .club-name {
+    display: inline-block;
+    vertical-align: middle;
     font-family: Arial, sans-serif;
     font-size: 24px;
     color: #333;
+    margin-left: 10px;
+    text-decoration: none;
+    transition: color 0.3s ease;
   }
 
-  a {
+  .club-name:hover {
+    color: #ff5500;
+  }
+
+  /* Navigation styles */
+  .navigation {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 20px;
+    list-style-type: none;
+  }
+
+  .navigation li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+
+  .navigation li:last-child {
+    margin-right: 0;
+  }
+
+  .navigation li a {
     text-decoration: none;
     color: #333;
     transition: color 0.3s ease;
   }
 
-  a:hover {
+  .navigation li a:hover {
     color: #ff5500;
-  }
-
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  li {
-    display: inline-block;
-    margin-right: 10px;
-  }
-
-  li:last-child {
-    margin-right: 0;
   }
 </style>
 
-<header>
-  <h2><a href="{% url 'index_page' %}" class="home-link">Chemna Football Club CFC</a></h2>
-  <ul>
+<header class="header">
+  <div class="logo">
+    <img src="{% static "chemnaFC/images/logo.png" %}" alt="logo">
+  </div>
+  <a href="{% url 'index_page' %}" class="club-name">Chemna Football Club CFC</a>
+  <ul class="navigation">
     <li><a href="{% url "table_page" %}">Table</a></li>
     <li><a href="{% url "match_page" %}">Match</a></li>
     <li><a href="{% url "squad_page" %}">Squad</a></li>
